--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 </head>
 <body class="bg-gray-900 text-gray-600">
     
+    <!-- nav -->
     <header class="sticky z-10 bg-gray-950 py-5">
         <nav class="w-9/12 flex flex-row mx-auto">
             <div class="uppercase text-lg basis-1/4"> <!--logo-->
@@ -43,6 +44,7 @@
             </div>
         </nav>
     </header>
+    <!-- nav end -->
 
     <main>
         <div class=" bg-gray-950  relative -top-16"> <!--hero-->
